--- a/game.css
+++ b/game.css
@@ -3,6 +3,10 @@ body{
 	height: 100%;
 	margin: 0px;
 	font-family: trebuchet ms;
+	background-image: url('background.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 div.logo{
@@ -12,7 +16,6 @@ div#lockerA{
 	position: relative;
 	right: 350px;
 	top: 70px;
-	border: solid #66b3ff 1px;
 	border-radius: 8px;
 	background-color: rgba(102,179,255,0.8);
 	color: white;
@@ -22,7 +25,6 @@ div#lockerB{
 	position: relative;
 	left: 350px;
 	top: 550px;
-	border: solid #d83230 1px;
 	border-radius: 8px;
 	background-color: rgba(216,50,48,0.9);
 	color: white;
@@ -30,23 +32,28 @@ div#lockerB{
 }
 
 div.wrapper{
-	margin-top: -50px;
+	position: relative;
+	top: -50px;
 	width: 600px;
 	height: 600px;
-	display: inline-block;
+	display: inline-grid;
+	justify-content: space-around;
 }
 div.first{
 	width: 600px;
 	display: inline-flex;
 	text-align: center;
 	height: 75px;
+	justify-content: space-around;
 }
 div.block{
-	width: 75px;
-	height: 75px;
-	border: solid #66b3ff 1px;
+	width: 12.3%;
+	height: 74px;
 	border-radius: 10px;
 	display: inline-grid;
+	background-image: url('block.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 div.mid{
 	width: 600px;
@@ -57,6 +64,7 @@ div.mid{
 button.roll{
 	font-size: 30px;
 	font-family: trebuchet ms;
+	background-color: #66b3ff; 
 	color: blue;
 	border: none;
 	border-radius: 8px;
@@ -76,6 +84,7 @@ div#value{
 	background-color: #66b3ff;
 	position: relative;
 	left: 55px;
+	margin-bottom: 7px;
 }
 div#turns{
 	font-size: 20px;
@@ -83,8 +92,10 @@ div#turns{
 	color: blue;
 	border: none;
 	border-radius: 8px;
-	padding: 5px 20px 5px 20px;
+	padding: 5px 0px 5px 0px;
 	text-align: center;
+	background-color: #66b3ff; 
+	margin-bottom: 7px;
 }
 div#terms{
 	font-size: 20px;
@@ -92,8 +103,10 @@ div#terms{
 	color: blue;
 	border: none;
 	border-radius: 8px;
-	padding: 5px 20px 5px 20px;
+	padding: 5px 0px 5px 0px;
 	text-align: center;
+	background-color: #66b3ff; 
+	margin-bottom: 7px;
 }
 input#dice{
 	height: 20px;
@@ -109,8 +122,14 @@ div#submit{
 	border-radius: 4px;
 	border: none;
 	width: 70px;
-	background-color: #f4f1ea;
+	background-color: #66b3ff;
 	margin-left: 6px;
 	padding: 5px 0px 5px 0px;
 	cursor: pointer;
+}
+form.checker{
+	display: inline-flex;
+	position: relative; 
+	right: 17.6px;
+	border: none;
 }
