--- a/ludo.css
+++ b/ludo.css
@@ -3,10 +3,6 @@ body{
 	height: 100%;
 	margin: 0px;
 	font-family: trebuchet ms;
-	background-image: url('background.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
 }
 
 div.logo{
@@ -16,6 +12,7 @@ div#lockerA{
 	position: relative;
 	right: 350px;
 	top: 70px;
+	border: solid #66b3ff 1px;
 	border-radius: 8px;
 	background-color: rgba(102,179,255,0.8);
 	color: white;
@@ -25,6 +22,7 @@ div#lockerB{
 	position: relative;
 	left: 350px;
 	top: 550px;
+	border: solid #d83230 1px;
 	border-radius: 8px;
 	background-color: rgba(216,50,48,0.9);
 	color: white;
@@ -32,28 +30,23 @@ div#lockerB{
 }
 
 div.wrapper{
-	position: relative;
-	top: -50px;
+	margin-top: -50px;
 	width: 600px;
 	height: 600px;
-	display: inline-grid;
-	justify-content: space-around;
+	display: inline-block;
 }
 div.first{
 	width: 600px;
 	display: inline-flex;
 	text-align: center;
 	height: 75px;
-	justify-content: space-around;
 }
 div.block{
-	width: 12.3%;
-	height: 74px;
+	width: 75px;
+	height: 75px;
+	border: solid #66b3ff 1px;
 	border-radius: 10px;
 	display: inline-grid;
-	background-image: url('block.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 div.mid{
 	width: 600px;
@@ -64,7 +57,6 @@ div.mid{
 button.roll{
 	font-size: 30px;
 	font-family: trebuchet ms;
-	background-color: #66b3ff; 
 	color: blue;
 	border: none;
 	border-radius: 8px;
@@ -84,41 +76,24 @@ div#value{
 	background-color: #66b3ff;
 	position: relative;
 	left: 55px;
-	margin-bottom: 7px;
 }
 div#turns{
-	width: 100px;
-	margin-left: 25px;
 	font-size: 20px;
 	font-family: inherit;
 	color: blue;
 	border: none;
 	border-radius: 8px;
-	padding: 5px 0px 5px 0px;
+	padding: 5px 20px 5px 20px;
 	text-align: center;
-	background-color: #66b3ff; 
-	margin-bottom: 7px;
 }
 div#terms{
-	width: 100px;
-	margin-left: 25px;
 	font-size: 20px;
 	font-family: inherit;
 	color: blue;
 	border: none;
 	border-radius: 8px;
-	padding: 5px 0px 5px 0px;
+	padding: 5px 20px 5px 20px;
 	text-align: center;
-	background-color: #66b3ff; 
-	margin-bottom: 7px;
-}
-div#gif{
-	width: 70px; 
-	height: 75px; 
-	position: relative; 
-	left: 40px;
-	text-align: center;
-	margin-bottom: 7px;
 }
 input#dice{
 	height: 20px;
@@ -134,14 +109,8 @@ div#submit{
 	border-radius: 4px;
 	border: none;
 	width: 70px;
-	background-color: #66b3ff;
+	background-color: #f4f1ea;
 	margin-left: 6px;
 	padding: 5px 0px 5px 0px;
 	cursor: pointer;
-}
-form.checker{
-	display: inline-flex;
-	position: relative; 
-	right: 17.6px;
-	border: none;
 }
