--- a/game.css
+++ b/game.css
@@ -51,8 +51,11 @@ div.block{
 	height: 74px;
 	border-radius: 10px;
 	display: inline-grid;
-	background: linear-gradient(to top left, #33ccff 0%, white 100%);
-	opacity: 0.85;
+	background: linear-gradient(to top left, #33ccff 0%, white 70%);
+	opacity: 0.75;
+}
+div.block:hover{
+	filter: brightness(400%);
 }
 div.mid{
 	width: 600px;
