--- a/game.css
+++ b/game.css
@@ -250,11 +250,11 @@ div.triangleBlock{
 }
 
 div#instruction{
-	width: 600px;
-	height: 400px;
+	width: 39.47%;
+	height: 51.1%;
 	position: fixed;
-	top: 170px;
-	left: 456px;
+	top: 17.47%;
+	left: 28.64%;
 	background-color: #f7cb65;
 	border-radius: 20px;
 	text-align: center;
@@ -264,21 +264,21 @@ div#instruction{
 }
 div#instruction_header{
 	position: relative; 
-	bottom: 50px; 
-	left: 160px; 
+	bottom: 13.02%; 
+	left: 26.27%; 
 	border-radius: 6px; 
 	background-color: brown; 
 	color: white; 
 	border: solid 4px black;
-	width: 280px;
+	width: 45.97%;
 }
 
 div#welcome{
-	width: 420px;
-	height: 200px;
+	width: 27.63%;
+	height: 26.5%;
 	position: fixed;
-	top: 320px;
-	left: 546px;
+	top: 32.87%;
+	left: 35.92%;
 	background-color: #f7cb65;
 	border-radius: 20px;
 	text-align: center;
@@ -288,11 +288,11 @@ div#welcome{
 }
 div#welcome_header{
 	position: relative; 
-	bottom: 50px; 
-	left: 160px; 
+	bottom: 24.5%; 
+	left: 38.1%; 
 	border-radius: 15px; 
 	color: white; 
 	border: solid 4px brown;
-	width: 100px;
-	height: 100px;
+	width: 23.8%;
+	height: 49.01%;
 }
